# differential_drive_robot

./: CMakeLists.txt  package.xml
config/: controllers.yaml  nav2_params.yaml  slam_toolbox.yaml
launch/: bringup.launch.py  navigation.launch.py  sim.launch.py  slam.launch.py
log/: latest_build
maps/: tb_world.pgm  tb_world.yaml
src/: autonomous_nav_node.cpp  odometry_node.cpp
urdf/: my_robot.urdf  old_model.urdf
urdf/walls/: model.sdf
