<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>differential_drive_robot</name>
  <version>0.0.1</version>
  <description>Autonomous Mobile Robot using ROS2 Humble and Nav2</description>
  <maintainer email="aniketnagare444@gmail.com">hello-boss</maintainer>
  <license>MIT</license>

  <!-- BUILD TOOLS -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- ROS2 CORE DEPENDENCIES -->
  <depend>rclpy</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_action</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>

  <!-- SIMULATION & GAZEBO -->
  <depend>gazebo_ros</depend>
  <depend>gazebo_ros_pkgs</depend>
  <depend>gazebo_ros2_control</depend>
  <depend>joint_state_broadcaster</depend>
  <depend>joint_state_publisher</depend>
  <depend>joint_state_publisher_gui</depend>
  <depend>robot_state_publisher</depend>
  <depend>xacro</depend>
  <depend>launch</depend>
  <depend>launch_ros</depend>
  <depend>ament_index_python</depend>

  <!-- SENSORS & PERCEPTION
  <depend>sensor_msgs</depend> -->

  <!-- NAVIGATION STACK (NAV2) -->
  <depend>nav2_bringup</depend>
  <depend>nav2_core</depend>
  <depend>nav2_map_server</depend>
  <depend>nav2_costmap_2d</depend>
  <depend>nav2_planner</depend>
  <depend>nav2_controller</depend>
  <depend>nav2_recoveries</depend>
  <depend>nav2_bt_navigator</depend>
  <depend>nav2_amcl</depend>
  <depend>nav2_msgs</depend>
  <depend>nav2_navfn_planner</depend>

  <!-- SLAM (MAPPING) -->
  <depend>slam_toolbox</depend>

  <!-- LOCALIZATION -->
  <depend>robot_localization</depend>

  <!-- MOTION CONTROL -->
  <depend>controller_manager</depend>
  <depend>diff_drive_controller</depend>

  <!-- TESTING -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>